reworked with framework from loremasters armoury

--- a/itemV2.cfg
+++ b/itemV2.cfg
@@ -1,4 +1,4 @@
-title = "Dark Elf Dagger";
+title = "Dark-Elf-Dagger";
 description = "Dark Elf Dagger model replacement for the Daith's Throatslitters, Sentinail's Ceyla, and Sentinail's Galria illusions on dual daggers, dual swords and sword and dagger respectively.";
 preview = "item_preview.png";
 content = "bundleV2";
